--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src",
     "paths": {
-      "@/*": ["./*"]
+      "@*": ["/*"]
     }
+  },
+  "exclude": ["node_modules"]
   }
-}
