--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
+    "target": "es6",
+    "module": "commonjs",
+    "moduleResolution": "node",
     "baseUrl": "./src",
     "paths": {
       "@*": ["/*"]
     }
-  },
-  "exclude": ["node_modules"]
+  }
   }
